Use immutable collections rather than unmodifiable
Unmodifiables do allocations on many getters, so it's worth the
up-front cost to pre-allocate a better collection that's used a
billion times than to cheaply build a worse collection.